test/test-files/analyzer/generics/error-failing-type-condition/exception.out
Semantic error in : ./test-files/analyzer/generics/error-failing-type-condition/source.spice:8:16:
Referenced undefined function: Function/Procedure 'max(short,short)' could not be found

dyn test = max(1s, 2s);
           ^^^^^^^^^^^